# Duality_Client

./: .gitmodules  CMakeLists.txt
IV3Dm2-iOS/IV3Dm2-iOS/: AppDelegate.h  AppDelegate.m  AppDelegate.mm  DynamicUIBuilder.h  DynamicUIBuilder.mm  FirstViewController.h  FirstViewController.m  Render3DViewController.h  Render3DViewController.mm  SceneWrapper.h  SceneWrapper.mm  SecondViewController.h  SecondViewController.m  SelectSceneViewController.h  SelectSceneViewController.m  SelectSceneViewController.mm  ServerAdapter.h  ServerAdapter.mm  SettingsViewController.h  SettingsViewController.mm  TabBarViewController.h  TabBarViewController.mm
IV3Dm2-iOS/IV3Dm2-iOS.xcodeproj/: project.pbxproj
IV3Dm2-iOS/IV3Dm2-iOS.xcodeproj/project.xcworkspace/xcshareddata/: IV3Dm2-iOS.xcscmblueprint
IV3Dm2-iOS/IV3Dm2-iOS/Communication/: ServerAdapter.cpp  ServerAdapter.h
IV3Dm2-iOS/IV3Dm2-iOS/Scene/: DownloadNode.cpp  DownloadNode.h  SceneDefinition.cpp  SceneDefinition.h  SceneDefinitionParser.cpp  SceneDefinitionProvider.h
IV3Dm2-lib/: CMakeLists.txt
IV3Dm2-lib/Common/: Error.h
IV3Dm2-lib/Communication/: DatasetProvider.h  DownloadProvider.h  SceneLoader.cpp  SceneLoader.h  SceneProvider.cpp  SceneProvider.h  ServerAdapter.cpp  ServerAdapter.h
IV3Dm2-lib/IVDA/: AbstrDebugOut.cpp  AbstrDebugOut.h  ArcBall.cpp  ArcBall.h  CMakeLists.txt  Console.h  ConsoleOut.cpp  ConsoleOut.h  DebugOutHandler.h  GLFrameBufferObject.h  GLInclude.h  GLShader.h  GPUObject.h  Macros.cpp  Macros.h  MultiplexOut.cpp  MultiplexOut.h  SysTools.cpp  SysTools.h  Threads.cpp  Threads.h  Vectors.h  XQueryComponents.h  iOS.mm
IV3Dm2-lib/Render/: AbstractRenderer.h  GLMatrix.cpp  GLMatrix.h  GeometryRenderer.cpp  GeometryRenderer.h  RenderDispatcher.h  ScreenInfo.h
IV3Dm2-lib/RendererImpl/: AbstractRendererImpl.cpp  AbstractRendererImpl.h  GLFrameBufferObject.cpp  GLObject.h  GLShader.cpp  GeometryRendererImpl.cpp  GeometryRendererImpl.h
IV3Dm2-lib/Resources/Shaders/: bb.fsh  bb.vsh  geo_pc.fsh  geo_pn.vsh  geo_pna.fsh  geo_pnc.vsh  geo_pnt.fsh  geo_pnt.vsh  geo_pnta.fsh  geo_pnta.vsh  quad.vsh  sliceQuad.fsh  vol.vsh  vol_l.fsh  vol_nl_2.fsh  vol_nlti_2.fsh
IV3Dm2-lib/Scene/: AbstractDispatcher.h  AbstractIO.cpp  AbstractRenderer.cpp  AbstractRenderer.h  BoundingBoxCalculator.cpp  BoundingBoxCalculator.h  CMakeLists.txt  Communication.cpp  DataProvider.h  DataProviderDispatcher.h  Dataset.cpp  Dataset.h  DatasetDispatcher.h  DatasetProvider.h  DownloadNode.cpp  DownloadNode.h  DownloadProvider.cpp  DownloadProvider.h  G3D.cpp  G3D.h  GLMatrix.cpp  GeometryDataset.cpp  GeometryDataset.h  GeometryNode.cpp  GeometryNode.h  GeometryRenderer.cpp  GeometryRenderer.h  GroupNode.cpp  GroupNode.h  InputParameter.h  InputVariable.cpp  InputVariable.h  ParameterManipulator.cpp  ParameterManipulator.h  PythonProvider.cpp  PythonProvider.h  RenderDispatcher.cpp  RenderDispatcher.h  SCIRunProvider.cpp  SCIRunProvider.h  (+20 more)
IV3Dm2-tests/: CMakeLists.txt
IV3Dm2-tests/Mocks/: DataProviderMock.h  DatasetMock.h  DatasetProviderMock.h
IV3Dm2-tests/Scene/: Integration.cpp  SceneDefinitionParserTest.cpp  SceneNodeTest.cpp  SceneParserTest.cpp
IV3Dm2-tests/gtest/googletest/include/gtest/internal/: gtest-port.h
IV3Dm2/Scene/: GroupNode.cpp  SceneDefinition.cpp
cmake/: GTest.cmake
doc/: Duality0.dia  Duality1.dia  Duality2.dia
duality-client/: CMakeLists.txt
duality-client/include/IVDA/: AbstrDebugOut.h  ArcBall.h  Console.h  DebugOutHandler.h  GLInclude.h  SysTools.h  Threads.h  Vectors.h  iOS.h
duality-client/include/duality/: AbstractRenderer.h  BoundingBox.h  BoundingBoxCalculator.h  Communication.h  CoordinateSystem.h  DataProvider.h  Dataset.h  DownloadProvider.h  Error.h  G3D.h  GeometryDataset.h  GeometryRenderer.h  GeometryRenderer2D.h  GeometryRenderer3D.h  GeometrySliceRenderer.h  GeometryUtil.h  InputVariable.h  MVP2D.h  MVP3D.h  PythonProvider.h  RenderDispatcher.h  RenderDispatcher2D.h  RenderDispatcher3D.h  Scene.h  SceneController2D.h  SceneController3D.h  SceneLoader.h  SceneMetadata.h  SceneNode.h  SceneParser.h  ScreenInfo.h  Settings.h  VariableInfo.h
duality-client/resources/Shaders/: geo_pc.vsh  geo_pn.fsh  geo_pna.vsh  geo_pnc.fsh  geo_pt.fsh  geo_pt.vsh  quad.fsh  sliceQuad.vsh  vol_lti.fsh  vol_lti_2.fsh
duality-client/src/IVDA/: AbstrDebugOut.cpp  AbstrDebugOut.h  ArcBall.cpp  ArcBall.h  Console.h  ConsoleOut.cpp  DebugOutHandler.cpp  DebugOutHandler.h  GLFrameBufferObject.cpp  GLFrameBufferObject.h  GLInclude.h  GLMatrix.cpp  GLObject.h  GLShader.cpp  GLShader.h  GPUObject.h  Macros.cpp  Macros.h  MultiplexOut.cpp  MultiplexOut.h  Singleton.h  SysTools.cpp  SysTools.h  Threads.cpp  Threads.h  XQueryComponents.mm  iOS.h
duality-client/src/duality/: AbstractIO.cpp  AbstractIO.h  AbstractRenderer.cpp  BoundingBox.cpp  BoundingBox.h  BoundingBoxCalculator.cpp  CacheProvider.cpp  CacheProvider.h  Color.h  Communication.cpp  Communication.h  CoordinateSystem.cpp  DataCache.cpp  DataCache.h  DataProvider.h  Dataset.cpp  Dataset.h  DatasetDispatcher.h  DownloadProvider.cpp  DownloadProvider.h  G3D.cpp  G3D.h  GLMatrix.cpp  GLTexture2D.cpp  GLTexture2D.h  GeometryDataset.cpp  GeometryDataset.h  GeometryNode.cpp  GeometryNode.h  GeometryRenderer.cpp  GeometryRenderer2D.cpp  GeometryRenderer2D.h  GeometryRenderer3D.cpp  GeometryRenderer3D.h  GeometrySliceRenderer.cpp  GeometryUtil.cpp  GeometryUtil.h  I3M.cpp  I3M.h  InputVariable.cpp  (+50 more)
duality-client/src/duality/private/: AbstractRendererImpl.cpp  AbstractRendererImpl.h  GLObject.h  GLShader.cpp  GLShader.h  GPUObject.h  GeometryRendererImpl.cpp  GeometryRendererImpl.h
tests/: CMakeLists.txt
tests/Mocks/: DataProviderMock.h  DatasetMock.h
tests/duality/: SceneNodeTest.cpp  SceneParserTest.cpp
