CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(duality-client LANGUAGES CXX)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS on)

ADD_SUBDIRECTORY(mocca/ext/AES)
ADD_SUBDIRECTORY(mocca/ext/base64)
ADD_SUBDIRECTORY(mocca/ext/jsoncpp)
ADD_SUBDIRECTORY(mocca/ext/sha1)
ADD_SUBDIRECTORY(mocca/mocca)

ADD_SUBDIRECTORY(duality-client)

IF (MSVC)
	SET(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
ENDIF ()
ADD_SUBDIRECTORY(mocca/ext/googletest)
ADD_SUBDIRECTORY(tests)