FILE(GLOB COMMON_HEADER ${CMAKE_CURRENT_LIST_DIR}/Common/*.h)
FILE(GLOB COMMON_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Common/*.cpp)
FILE(GLOB COMMUNICATION_HEADER ${CMAKE_CURRENT_LIST_DIR}/Communication/*.h)
FILE(GLOB COMMUNICATION_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Communication/*.cpp)
FILE(GLOB SCENE_HEADER ${CMAKE_CURRENT_LIST_DIR}/Scene/*.h)
FILE(GLOB SCENE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Scene/*.cpp)

ADD_SUBDIRECTORY(mocca/mocca)

ADD_LIBRARY(IV3Dm2-lib 
	${COMMON_HEADER} ${COMMON_SOURCE}
	${COMMUNICATION_HEADER} ${COMMUNICATION_SOURCE}
	${SCENE_HEADER} ${SCENE_SOURCE}
	$<TARGET_OBJECTS:mocca>
)