FILE(GLOB COMMON_HEADER ${CMAKE_CURRENT_LIST_DIR}/Common/*.h)
FILE(GLOB COMMON_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Common/*.cpp)
FILE(GLOB COMMUNICATION_HEADER ${CMAKE_CURRENT_LIST_DIR}/Communication/*.h)
FILE(GLOB COMMUNICATION_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Communication/*.cpp)
FILE(GLOB SCENE_HEADER ${CMAKE_CURRENT_LIST_DIR}/Scene/*.h)
FILE(GLOB SCENE_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Scene/*.cpp)
FILE(GLOB RENDER_HEADER ${CMAKE_CURRENT_LIST_DIR}/Render/*.h)
FILE(GLOB RENDER_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Render/*.cpp)
FILE(GLOB IVDA_HEADER ${CMAKE_CURRENT_LIST_DIR}/IVDA/*.h)
FILE(GLOB IVDA_SOURCE ${CMAKE_CURRENT_LIST_DIR}/IVDA/*.cpp)

ADD_SUBDIRECTORY(mocca/mocca)

ADD_LIBRARY(IV3Dm2-lib 
	${COMMON_HEADER} ${COMMON_SOURCE}
	${COMMUNICATION_HEADER} ${COMMUNICATION_SOURCE}
	${SCENE_HEADER} ${SCENE_SOURCE}
	${RENDER_HEADER} ${RENDER_SOURCE}
	${IVDA_HEADER} ${IVDA_SOURCE}
	$<TARGET_OBJECTS:mocca>
)