#FILE(GLOB COMMON_HEADER ${CMAKE_CURRENT_LIST_DIR}/Common/*.h)
#FILE(GLOB COMMON_SOURCE ${CMAKE_CURRENT_LIST_DIR}/Common/*.cpp)

ADD_SUBDIRECTORY(mocca/mocca)

ADD_SUBDIRECTORY(IVDA)
ADD_SUBDIRECTORY(Scene)

ADD_LIBRARY(IV3Dm2-lib 
	$<TARGET_OBJECTS:mocca>
	$<TARGET_OBJECTS:ivda>
	$<TARGET_OBJECTS:scene>
)